[FIX] web: fix multiple display errors
This commit will fix some display errors :
 - The margin space between two btn-group on the control panel was too big;
-  The "Group By" menu was lacking an option to add the "fa-caret-down" to looks like other
    Dropdowns;
- The "Group By" menu on the graph view, when used as a subview, has been place in its own
    btn-group to behave exactly as the "Measures" menu;
- The background of the headers on the pivot table wasn't always gray;
- Some borders of the pivot table were missing.

X-original-commit: 0ffe18927c2f086529de168b5665766a1b9261f7

--- a/addons/web/static/src/views/pivot/pivot_view.scss
+++ b/addons/web/static/src/views/pivot/pivot_view.scss
@@ -40,17 +40,16 @@
         }
 
         th, td {
-            border-color: gray('400');
-            border-width: 0 $border-width $border-width 0;
+            border-color: gray('200');
+            border-width: $border-width $border-width $border-width $border-width;
         }
 
         th {
             font-weight: $font-weight-normal;  // bootstrap override
-            background-color: $o-view-background-color;
+            background-color: gray('100');
         }
 
         @mixin o-pivot-header-cell {
-            background-color: gray('100');
             cursor: pointer;
             white-space: nowrap;
             user-select: none;
